SPI in unit tests.